Wed Sep 24 03:08:58 2008  Eric Hodel  <drbrain@segment7.net>

	* lib/uri/mailto.rb: fix indentation.
	* lib/uri/generic.rb: ditto.
	* lib/yaml.rb: ditto.
	* lib/uri/cgi/core.rb: fix indentation and ambiguous argument warning.

Tue Sep 23 23:39:25 2008  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv/csv.rb:  Improved the idea of whitespace and word characters used
	  in substitutions during header conversion as suggested by Michael Selig.

Tue Sep 23 21:50:53 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (io_binwrite): allocate wbuf if nosync.

Tue Sep 23 21:45:02 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (copy_stream_body): use io_binwrite instead of io_fwrite.

Tue Sep 23 21:31:16 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/ruby/test_rational2.rb: updated.

	* test/ruby/test_complex2.rb: added.

	* test/ruby/test_complexrational.rb: added.

Tue Sep 23 21:26:32 2008  Tanaka Akira  <akr@fsij.org>

	* string.c (rb_str_casecmp): make the ordering consistent with
	  String#<=>.

Tue Sep 23 20:52:25 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (io_binwrite): add nosync argument.
	  (do_writeconv): extracted from io_fwrite.
	  (io_fwrite): add nosync argument.  use do_writeconv.
	  (io_write): add nosync argument.
	  (io_write_m): new function for IO#write.
	  (rb_p): don't append record separator.

Tue Sep 23 20:24:41 2008  Koichi Sasada  <ko1@atdot.net>

	* signal.c (signal_exec): fix to use rb_proc_call().

Tue Sep 23 20:06:46 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/formatters/pretty.rb (REXML::Formatters::Pretty#wrap):
	  abandon wrapping if the line contains no space.  [ruby-dev:36045]

Tue Sep 23 19:38:03 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (subtruct): check tv_sec. reported by ko1.

Tue Sep 23 19:21:03 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_s_canonicalize_internal): does no apply
	  canonicalization rule anymore.

	* rational.c (nurat_s_canonicalize_internal(_no_reduce)?): ditto.
